// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function declarations parses minimal empty function declarations 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "foo",
    },
    "parameters": Array [],
  },
]
`;

exports[`parser sub declarations parses minimal sub declarations 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "bar",
    },
    "parameters": Array [],
  },
]
`;
